--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,6 @@
     "\n",
     "        #calculate until the difference \n",
     "        #between the root and n is less than 0.01\n",
-    "                 \n",
-    "        \n",
     "        if abs(root - n) < 0.01:\n",
     "            break \n",
     "        \n",
@@ -44,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +51,7 @@
        "2.0000000929222947"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,11 +60,89 @@
     "#test\n",
     "sqrt(4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import modules\n",
+    "import numpy as np\n",
+    "import scipy.stats as ss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Null hypotesis:** There is evidence of an association between drink preference and biscuit preference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07762509678333357"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create array\n",
+    "table = np.array([[43, 57], [56, 45]])\n",
+    "\n",
+    "#do the statistics\n",
+    "result = ss.chi2_contingency(table, correction=False)\n",
+    "\n",
+    "#show pvalue\n",
+    "result.pvalue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With a significance level of 5% and an observed pvalue of ~7.8% we accept the null hypotesis that there is evidence of association between drink and biscuit preferences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
