--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "0.07762509678333357"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,324 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a significance level of 5% and an observed pvalue of ~7.8% we accept the null hypotesis that there is evidence of association between drink and biscuit preferences."
+    "With a significance level of 5%, an observed pvalue of ~7.8% would suggest that we accept the null hypotesis that there is evidence of association between drink and biscuit preferences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import modules\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of     species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0    Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1    Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2    Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "3    Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "4    Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "..      ...        ...             ...            ...                ...   \n",
+       "339  Gentoo     Biscoe             NaN            NaN                NaN   \n",
+       "340  Gentoo     Biscoe            46.8           14.3              215.0   \n",
+       "341  Gentoo     Biscoe            50.4           15.7              222.0   \n",
+       "342  Gentoo     Biscoe            45.2           14.8              212.0   \n",
+       "343  Gentoo     Biscoe            49.9           16.1              213.0   \n",
+       "\n",
+       "     body_mass_g     sex  \n",
+       "0         3750.0    MALE  \n",
+       "1         3800.0  FEMALE  \n",
+       "2         3250.0  FEMALE  \n",
+       "3            NaN     NaN  \n",
+       "4         3450.0  FEMALE  \n",
+       "..           ...     ...  \n",
+       "339          NaN     NaN  \n",
+       "340       4850.0  FEMALE  \n",
+       "341       5750.0    MALE  \n",
+       "342       5200.0  FEMALE  \n",
+       "343       5400.0    MALE  \n",
+       "\n",
+       "[344 rows x 7 columns]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#read dataset\n",
+    "df=pd.read_csv('https://raw.githubusercontent.com/mwaskom/seaborn-data/master/penguins.csv')\n",
+    "df.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of     species  body_mass_g     sex\n",
+       "0    Adelie       3750.0    MALE\n",
+       "1    Adelie       3800.0  FEMALE\n",
+       "2    Adelie       3250.0  FEMALE\n",
+       "3    Adelie          NaN     NaN\n",
+       "4    Adelie       3450.0  FEMALE\n",
+       "..      ...          ...     ...\n",
+       "339  Gentoo          NaN     NaN\n",
+       "340  Gentoo       4850.0  FEMALE\n",
+       "341  Gentoo       5750.0    MALE\n",
+       "342  Gentoo       5200.0  FEMALE\n",
+       "343  Gentoo       5400.0    MALE\n",
+       "\n",
+       "[344 rows x 3 columns]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#selecting columns\n",
+    "df=df[['species','body_mass_g','sex']]\n",
+    "df.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>4500.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>5700.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>4450.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>5700.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>5400.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>4850.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>5750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>5200.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>5400.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>124 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    species  body_mass_g     sex\n",
+       "220  Gentoo       4500.0  FEMALE\n",
+       "221  Gentoo       5700.0    MALE\n",
+       "222  Gentoo       4450.0  FEMALE\n",
+       "223  Gentoo       5700.0    MALE\n",
+       "224  Gentoo       5400.0    MALE\n",
+       "..      ...          ...     ...\n",
+       "339  Gentoo          NaN     NaN\n",
+       "340  Gentoo       4850.0  FEMALE\n",
+       "341  Gentoo       5750.0    MALE\n",
+       "342  Gentoo       5200.0  FEMALE\n",
+       "343  Gentoo       5400.0    MALE\n",
+       "\n",
+       "[124 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#filtering only gentoo\n",
+    "gentoo = df.loc[df['species']=='Gentoo']\n",
+    "gentoo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5700., 5700., 5400., 5200., 5150., 5550., 5850., 5850., 6300.,\n",
+       "       5350., 5700., 5050., 5100., 5650., 5550., 5250., 6050., 5400.,\n",
+       "       5250., 5350., 5700., 4750., 5550., 5400., 5300., 5300., 5000.,\n",
+       "       5050., 5000., 5550., 5300., 5650., 5700., 5800., 5550., 5000.,\n",
+       "       5100., 5800., 6000., 5950., 5450., 5350., 5600., 5300., 5550.,\n",
+       "       5400., 5650., 5200., 4925., 5250., 5600., 5500., 5500., 5500.,\n",
+       "       5500., 5950., 5500., 5850., 6000., 5750., 5400.])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#male body mass\n",
+    "sample_a = gentoo[gentoo['sex'] == 'MALE']['body_mass_g'].to_numpy()\n",
+    "\n",
+    "sample_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4500., 4450., 4550., 4800., 4400., 4650., 4650., 4200., 4150.,\n",
+       "       4800., 5000., 4400., 5000., 4600., 4700., 5050., 5150., 4950.,\n",
+       "       4350., 3950., 4300., 4900., 4200., 5100., 4850., 4400., 4900.,\n",
+       "       4300., 4450., 4200., 4400., 4700., 4700., 4750., 5200., 4700.,\n",
+       "       4600., 4750., 4625., 4725., 4750., 4600., 4875., 4950., 4750.,\n",
+       "       4850., 4875., 4625., 4850., 4975., 4700., 4575., 5000., 4650.,\n",
+       "       4375., 4925., 4850., 5200.])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#female body mass\n",
+    "sample_b = gentoo[gentoo['sex'] == 'FEMALE']['body_mass_g'].to_numpy()\n",
+    "\n",
+    "sample_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=14.721676481405709, pvalue=2.133687602018886e-28)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# t-test\n",
+    "ss.ttest_ind(sample_a, sample_b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "T-test result provides evidence that there is a significant difference in body mass of male and female Gentoo penguins. The low pvalue indicates that the mean values of body mass for males and females are highly unlikely to coincide, which invalidates the null hypotesis that males and females are indistinguishable by body mass. "
    ]
   },
   {
