--- a/project.ipynb
+++ b/project.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='https://editor.analyticsvidhya.com/uploads/51518iris%20img1.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Supervised Learning\n",
     "\n",
     "Supervised learning is a machine learning technique that relies on labeled data to train a model. This labeled data consists of pairs of input features and corresponding output labels. The model learns the patterns and relationships between the features and labels, enabling it to predict the appropriate label for new data points."
@@ -39,6 +46,31 @@
     "**4. Decision Trees:** decision trees recursively partition the data into smaller subsets based on specific features. They are easy to interpret and visualise, but can suffer from overfitting if not carefully tuned.\n",
     "\n",
     "**5. Support Vector Machines (SVMs):** SVMs find a hyperplane that maximally separates the data points into different classes. They are effective for high-dimensional data and outliers, but can be sensitive to feature scaling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Iris dataset\n",
+    "\n",
+    "The Iris flower dataset or Fisher's Iris dataset is a multivariate dataset introduced by the British statistician and biologist Ronald Fisher in his 1936 paper *The use of multiple measurements in taxonomic problems as an example of linear discriminant analysis*. It is sometimes called Anderson's Iris dataset because Edgar Anderson collected the data to quantify the morphologic variation of Iris flowers of three related species."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Overview\n",
+    "\n",
+    "The Iris dataset consists of 150 samples of 50 flowers each from three species of Iris: Iris setosa, Iris virginica, and Iris versicolor. Four features were measured from each sample:\n",
+    "\n",
+    "1. Sepal length (cm)\n",
+    "2. Sepal width (cm)\n",
+    "3. Petal length (cm)\n",
+    "4. Petal width (cm)\n",
+    "\n",
+    "The goal is to use these four features to classify the species of Iris flower. The Iris dataset is a popular benchmark dataset for machine learning algorithms. It is relatively easy to understand and interpret and is also relatively small, making it efficient to train and evaluate machine learning algorithms."
    ]
   },
   {
