--- a/project.ipynb
+++ b/project.ipynb
@@ -76,7 +76,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To exemplify this, we'll use the KNN approach to the dataset and make a prediction based on 4 random data points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN - Iris dataset"
+   ]
   },
   {
    "cell_type": "code",
