Changed image width (not rendering on Github)

--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='https://editor.analyticsvidhya.com/uploads/51518iris%20img1.png' />"
+    "<img src='https://editor.analyticsvidhya.com/uploads/51518iris%20img1.png' width='800' />"
    ]
   },
   {
