--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='https://editor.analyticsvidhya.com/uploads/51518iris%20img1.png' width='800' />"
+    "<img src='https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Machine+Learning+R/iris-machinelearning.png' width='800' />"
    ]
   },
   {
